# bact-archiver-bessyii

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi-publish.yml  python-package.yml
bact_archiver_bessyii/: __init__.py  archiver.cfg
bact_archiver_bessyii/utils/: __init__.py  fofb_bpm_data.py
config/: archiver.cfg
tests/: test_archiver_access.py  test_archiver_bessyii.py  test_archiver_local.py  test_archiver_scalar.py  test_archiver_vector.py
