# -*- coding: utf-8 -*-

[metadata]
name = bact-archiver-local
fullname = BACT epics archiver appliance access configuration
version = 0.0.0
url = https://github.com/hz-b/bact-archiver-local
author = Andreas Schälicke, Pierre Schnizer
author_email = andreas.schaelicke@helmholtz-berlin.de
               pierre.schnizer@helmholtz-berlin.de
description = EPICS archiver appliance access using google protobuf. example configuration
classifiers =
	 Development Status :: 2 - Pre-Alpha
         Intended Audience :: Science/Research
         License :: OSI Approved :: GNU General Public License (GPL)
         Programming Language :: Python :: 3
         Topic :: Scientific/Engineering :: Physics

[build-system]
requires = setup_tools

[options]
# install_requires = bact-archiver
packages = find:
include_package_data = True

[options.data_files]
config = config/archiver.cfg
