# -*- coding: utf-8 -*-

[metadata]
name = bact-archiver-bessyii
fullname = BACT epics archiver appliance access for BESSY II
version = 0.2.0
url = https://github.com/hz-b/bact-archiver
author = Andreas Schälicke, Pierre Schnizer
author_email = andreas.schaelicke@helmholtz-berlin.de
               pierre.schnizer@helmholtz-berlin.de
description = EPICS archiver appliance access using google protobuf. Configuration for BESSY II
classifiers =
	 Development Status :: 4 - Beta
         Intended Audience :: Science/Research
         License :: OSI Approved :: GNU General Public License (GPL)
         Programming Language :: Python :: 3
         Topic :: Scientific/Engineering :: Physics

[build-system]
requires = setup_tools

[options]
# install_requires = bact-archiver
packages = find:
include_package_data = True

[options.package_data]
bact_archiver_local =
    archiver.cfg
